
AM_CPPFLAGS = -DTCPSOCK_LENINCL -DTCPSOCK_OFFSET8
AM_CXXFLAGS = -Wall -Werror -O2 -Os -I../include/
AM_LDFLAGS = 

lib_LIBRARIES = libamanita.a

nobase_include_HEADERS = \
	../include/libamanita/aCollection.h \
	../include/libamanita/aDictionary.h \
	../include/libamanita/aFlood.h \
	../include/libamanita/aHashtable.h \
	../include/libamanita/aInteger.h \
	../include/libamanita/aIterator.h \
	../include/libamanita/aMath.h \
	../include/libamanita/aObject.h \
	../include/libamanita/aPath.h \
	../include/libamanita/aRandom.h \
	../include/libamanita/aRegex.h \
	../include/libamanita/aString.h \
	../include/libamanita/aVector.h \
	../include/libamanita/aWord.h \
	../include/libamanita/sdl/aButton.h \
	../include/libamanita/sdl/aClient.h \
	../include/libamanita/sdl/aComponent.h \
	../include/libamanita/sdl/aDisplay.h \
	../include/libamanita/sdl/aEvent.h \
	../include/libamanita/sdl/aFont.h \
	../include/libamanita/sdl/aGraphics.h \
	../include/libamanita/sdl/aHttp.h \
	../include/libamanita/sdl/aIconButton.h \
	../include/libamanita/sdl/aImage.h \
	../include/libamanita/sdl/aScroll.h \
	../include/libamanita/sdl/aServer.h \
	../include/libamanita/sdl/aSocket.h \
	../include/libamanita/sdl/aTabset.h \
	../include/libamanita/sdl/aText.h \
	../include/libamanita/sdl/aTextbox.h \
	../include/libamanita/sdl/aTextfield.h \
	../include/libamanita/sdl/aTooltip.h \
	../include/libamanita/sdl/aWindow.h \
	../include/libamanita/sdl/aThread.h \
	../include/libamanita/sqlite/aRecord.h \
	../include/libamanita/sqlite/aResultset.h \
	../include/libamanita/sqlite/aSQLite.h

libamanita_a_SOURCES = \
	$(nobase_include_libamanita_HEADERS) \
	../src/aCollection.cpp \
	../src/aDictionary.cpp \
	../src/aFlood.cpp \
	../src/aHashtable.cpp \
	../src/aInteger.cpp \
	../src/aMath.cpp \
	../src/aObject.cpp \
	../src/aPath.cpp \
	../src/aRandom.cpp \
	../src/aRegex.cpp \
	../src/aString.cpp \
	../src/aString_HTMLentities.cpp \
	../src/aVector.cpp \
	../src/aWord.cpp \
	../src/config.cpp \
	../src/config.h \
	../src/sdl/aButton.cpp \
	../src/sdl/aClient.cpp \
	../src/sdl/aComponent.cpp \
	../src/sdl/aDisplay.cpp \
	../src/sdl/aFont.cpp \
	../src/sdl/aGraphics.cpp \
	../src/sdl/aHttp.cpp \
	../src/sdl/aIconButton.cpp \
	../src/sdl/aImage.cpp \
	../src/sdl/aScroll.cpp \
	../src/sdl/aServer.cpp \
	../src/sdl/aSocket.cpp \
	../src/sdl/aTabset.cpp \
	../src/sdl/aText.cpp \
	../src/sdl/aTextbox.cpp \
	../src/sdl/aTextfield.cpp \
	../src/sdl/aThread.cpp \
	../src/sdl/aTooltip.cpp \
	../src/sdl/aWindow.cpp \
	../src/sqlite/aRecord.cpp \
	../src/sqlite/aResultset.cpp \
	../src/sqlite/aSQLite.cpp



